<resources>
    <string name="app_name">MyRoomDatabase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="image">Image</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="register">Register</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="add_note">Add Note</string>
    <string name="judul">Judul</string>
    <string name="catatan">Catatan</string>
    <string name="time">Time</string>
    <string name="note">Note</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_note">Edit Note</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello,</string>
</resources>