<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginFragment">


    <TextView
        style="@style/TextStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_email"
        style="@style/InputTextStyle"
        android:hint="@string/masukkan_email"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />


    <EditText
        android:id="@+id/input_password"
        style="@style/InputTextStyle"
        android:layout_marginTop="10dp"
        android:hint="@string/masukkan_password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonStyle"
        android:layout_marginHorizontal="20dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>