<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".DetailFragment">

    <LinearLayout
        android:id="@+id/ll_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_judul"
            style="@style/TextStyle"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/judul"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/time"/>
        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginVertical="20dp"
            style="@style/TextStyle"
            android:text="@string/note"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_home"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/home"
        android:src="@drawable/ic_baseline_home_24"
        />

    <ImageView
        android:id="@+id/btn_share"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_share_24"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_note"
        android:gravity="end">
        <ImageView
            android:id="@+id/btn_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_edit_24"
            />
        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_delete_24"
            />
    </LinearLayout>


</RelativeLayout>